<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husarion_ugv_franka_manipulator_bringup</name>
  <version>1.0.0</version>
  <description>Package for Husarion UGV and Franka Research 3 integration</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com</url>
  <url type="repository">https://github.com/husarion/husarion_ugv_ros</url>
  <url type="bugtracker">https://github.com/husarion/husarion_ugv_ros/issues</url>

  <author email="stefan.kowalczyk@husarion.com">Stefan Kowalczyk</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>husarion_ugv_description</depend>
  <depend>husarion_ugv_messages</depend>
  <depend>franka_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
